# tool-gates

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.jsonc  build.rs  cliff.toml  lefthook.yml  mise.toml  release-please-config.json  release-plz.toml
.cargo/: config.toml
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/rules/: hook-reference.md
.claude/skills/gate-audit/: SKILL.md
.claude/skills/hook-reference/: SKILL.md
.claude/skills/test-gate/: SKILL.md
.github/workflows/: ci.yml  docs.yml  format.yml  release.yml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/review/: SKILL.md
claude-plugin/skills/test-gate/: SKILL.md
docs/: book.toml
docs/src/: 404.md  SUMMARY.md  antigravity.md  approval-learning.md  architecture.md  auto-mode.md  cli.md  codex.md  configuration.md  contributing.md  custom-handlers.md  design-lint.md  doctor.md  glossary.md  hints.md  hook-model.md  index.md  install.md  modes.md  reason-style.md  review-tui.md  scratch.md  security-floor.md  security-reminders.md  settings-precedence.md  try.md  whats-new.md
docs/src/gates/: basics.md  beads.md  cloud.md  devtools.md  filesystem.md  gh.md  git.md  network.md  package_managers.md  runtimes.md  shortcut.md  system.md  tool_gates.md
docs/theme/: highlight.css  index.hbs  tool-gates.js
docs/theme/css/: tool-gates.css  variables.css
docs/theme/fonts/: fonts.css
rules/: basics.toml  beads.toml  cloud.toml  devtools.toml  filesystem.toml  gh.toml  git.toml  network.toml  package_managers.toml  runtimes.toml  shortcut.toml  system.toml  tool_gates.toml
skills/review/: SKILL.md
skills/test-gate/: SKILL.md
src/: apply_patch_parser.rs  cache.rs  config.rs  design_lint.rs  file_guards.rs  git_aliases.rs  hint_tracker.rs  hints.rs  lib.rs  main.rs  mise.rs  models.rs  package_json.rs  parser.rs  patterns.rs  pending.rs  permission_request.rs  post_tool_use.rs  router.rs  rules_export.rs  rules_schema.rs  security_reminders.rs  settings.rs  settings_writer.rs  toml_export.rs  tool_blocks.rs  tool_cache.rs  tracking.rs
src/gates/: basics.rs  beads.rs  cloud.rs  devtools.rs  filesystem.rs  gh.rs  git.rs  helpers.rs  mod.rs  network.rs  package_managers.rs  runtimes.rs  shortcut.rs  system.rs  test_utils.rs  tool_gates.rs
src/tui/: app.rs  ask_audit.rs  mod.rs  theme.rs  ui.rs
tests/: accept_edits_mcp_integration.rs  codex_contract_integration.rs  plan_mode_contract.rs  rules_export.rs  scratch_integration.rs
