[package]
name = "tool-gates"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Intelligent tool permission gates for AI coding assistants"
license = "MIT"
publish = false

[lib]
name = "tool_gates"
path = "src/lib.rs"

[[bin]]
name = "tool-gates"
path = "src/main.rs"

[dependencies]
# Parsing
tree-sitter = "0.26"
tree-sitter-bash = "0.25"

# Settings
dirs = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Patterns
regex = "1"

# Rules
toml = "1.0"

# Time handling for tracking TTL
chrono = { version = "0.4", features = ["serde"] }

# File locking for concurrent access
fs2 = "0.4"

# UUID for pending entry IDs
uuid = { version = "1", features = ["v4"] }

# TUI for interactive review
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
proptest = "1"  # Property-based/fuzz testing
tempfile = "3"  # Temporary directories for settings.json tests

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
lto = true
